Added python requirements.txt. Pushed WIP code. Currently attempting to run baseline on workstation.

--- a/Word_Embeddings.ipynb
+++ b/Word_Embeddings.ipynb
@@ -151,6 +151,114 @@
     "    losses.append(total_loss)\n",
     "print(losses)  # The loss decreased every iteration over the training data!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# encoding=utf-8\n",
+    "# Project: learn-pytorch\n",
+    "# Author: xingjunjie    github: @gavinxing\n",
+    "# Create Time: 29/07/2017 11:58 AM on PyCharm\n",
+    "# Basic template from http://pytorch.org/tutorials/beginner/nlp/word_embeddings_tutorial.html\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.autograd as autograd\n",
+    "import torch.optim as optim\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "class CBOW(nn.Module):\n",
+    "\n",
+    "    def __init__(self, context_size=2, embedding_size=100, vocab_size=None):\n",
+    "        super(CBOW, self).__init__()\n",
+    "        self.embeddings = nn.Embedding(vocab_size, embedding_size)\n",
+    "        self.linear1 = nn.Linear(embedding_size, vocab_size)\n",
+    "\n",
+    "    def forward(self, inputs):\n",
+    "        lookup_embeds = self.embeddings(inputs)\n",
+    "        embeds = lookup_embeds.sum(dim=0)\n",
+    "        out = self.linear1(embeds)\n",
+    "        out = F.log_softmax(out)\n",
+    "        return out\n",
+    "\n",
+    "\n",
+    "\n",
+    "# create your model and train.  here are some functions to help you make\n",
+    "# the data ready for use by your module\n",
+    "\n",
+    "\n",
+    "def make_context_vector(context, word_to_ix):\n",
+    "    idxs = [word_to_ix[w] for w in context]\n",
+    "    tensor = torch.LongTensor(idxs)\n",
+    "    return autograd.Variable(tensor)\n",
+    "\n",
+    "\n",
+    "# print(make_context_vector(data[0][0], word_to_ix))  # example\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    CONTEXT_SIZE = 2  # 2 words to the left, 2 to the right\n",
+    "    EMBEDDING_SIZE = 10\n",
+    "    raw_text = \"\"\"We are about to study the idea of a computational process.\n",
+    "    Computational processes are abstract beings that inhabit computers.\n",
+    "    As they evolve, processes manipulate other abstract things called data.\n",
+    "    The evolution of a process is directed by a pattern of rules\n",
+    "    called a program. People create programs to direct processes. In effect,\n",
+    "    we conjure the spirits of the computer with our spells.\"\"\".split()\n",
+    "\n",
+    "    # By deriving a set from `raw_text`, we deduplicate the array\n",
+    "    vocab = set(raw_text)\n",
+    "    vocab_size = len(vocab)\n",
+    "\n",
+    "    word_to_ix = {word: i for i, word in enumerate(vocab)}\n",
+    "    data = []\n",
+    "    for i in range(2, len(raw_text) - 2):\n",
+    "        context = [raw_text[i - 2], raw_text[i - 1],\n",
+    "                   raw_text[i + 1], raw_text[i + 2]]\n",
+    "        target = raw_text[i]\n",
+    "        data.append((context, target))\n",
+    "\n",
+    "    loss_func = nn.CrossEntropyLoss()\n",
+    "    net = CBOW(CONTEXT_SIZE, embedding_size=EMBEDDING_SIZE, vocab_size=vocab_size)\n",
+    "    optimizer = optim.SGD(net.parameters(), lr=0.01)\n",
+    "\n",
+    "    for epoch in range(100):\n",
+    "        total_loss = 0\n",
+    "        for context, target in data:\n",
+    "            context_var = make_context_vector(context, word_to_ix)\n",
+    "            net.zero_grad()\n",
+    "            log_probs = net(context_var)\n",
+    "\n",
+    "            loss = loss_func(log_probs, autograd.Variable(\n",
+    "                torch.LongTensor([word_to_ix[target]])\n",
+    "            ))\n",
+    "\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "\n",
+    "            total_loss += loss.data\n",
+    "        print(total_loss)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Human Priors: Linguistic Dark Matter\n",
+    "The missing information from any word, sentence, communication."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# InstructGAN\n",
+    "Sentence -> Actions -> Sentence"
+   ]
   }
  ],
  "metadata": {
