--- a/scene_graph.ipynb
+++ b/scene_graph.ipynb
@@ -13,7 +13,6 @@
     "import torchtext\n",
     "import pickle\n",
     "import matplotlib.pyplot as plt\n",
-    "import os\n",
     "\n",
     "try:\n",
     "    __word_vec__\n",
@@ -40,7 +39,35 @@
     "#         self._word_vec = __word_vec__.get_vecs_by_token if word_vec is None else word_vec\n",
     "        self.init_word_vec()\n",
     "    \n",
-    "        self._translate_unknown_words = {'stoveburner': ['stove', 'burner'],\n",
+    "        self._translate_unknown_words = {'stoveburner': 'stove',\n",
+    "                                         'stoveknob': 'stove',\n",
+    "                                        'sinkbasin': 'sink',\n",
+    "                                        'garbagecan': 'garbage',\n",
+    "                                        'soapbottle': 'soap',\n",
+    "                                        'coffeemachine': 'coffee',\n",
+    "                                        'dishsponge': 'sponge',\n",
+    "                                        'peppershaker': 'pepper',\n",
+    "                                        'spraybottle': 'spray',\n",
+    "                                        'glassbottle' : 'glass',\n",
+    "                                        'butterknife' : 'butter',\n",
+    "                                        'papertowelroll': 'towel',\n",
+    "                                        'winebottle': 'wine',\n",
+    "                                        'floorlamp': 'lamp',\n",
+    "                                        'diningtable': 'table',\n",
+    "                                        'showercurtain' : 'shower',\n",
+    "                                        'bathtubbasin' : 'bathtub',\n",
+    "                                        'toiletpaperhanger' : 'hanger',\n",
+    "                                        'towelholder' : 'holder',\n",
+    "                                        'breadsliced' : 'bread',\n",
+    "                                        'wateringcan' : 'water',\n",
+    "                                        'tvstand' : 'stand',\n",
+    "                                        'tissuebox' : 'tissue',\n",
+    "                                        'desklamp' : 'lamp'}\n",
+    "        \n",
+    "        # Using these reduces performance. I believe because they are averaged you lose a lot of useful information.\n",
+    "        # Learning word vectors would help \n",
+    "        \"\"\" \n",
+    "                                        {'stoveburner': ['stove', 'burner'],\n",
     "                                         'stoveknob': ['stove', 'knob'],\n",
     "                                        'sinkbasin': ['sink', 'basin'],\n",
     "                                        'garbagecan': ['garbage', 'can'],\n",
@@ -64,7 +91,7 @@
     "                                        'tvstand' : ['tv', 'stand'],\n",
     "                                        'tissuebox' : ['tissue', 'box'],\n",
     "                                        'desklamp' : ['desk', 'lamp']}\n",
-    "        \n",
+    "        \"\"\"\n",
     "        self.setup()\n",
     "        \n",
     "    # =================================================================================== \n",
@@ -96,7 +123,7 @@
     "    def add_robot(self, **kwargs):\n",
     "        x = self.word2vec('robot') \n",
     "                \n",
-    "        self.add_node(self.node_counter, x=x, node_type='robot', text='robot', **kwargs)                                        \n",
+    "        self.add_node(self.node_counter, x=x, node_type='robot', **kwargs)                                        \n",
     "        self.node_counter += 1                                \n",
     "        return self.node_counter-1\n",
     "    # =================================================================================== \n",
@@ -113,7 +140,6 @@
     "                if len(representation.shape) > 1:\n",
     "                    representation = torch.mean(representation, dim=0)\n",
     "            else:\n",
-    "                #representation = self._word_vec.get_vecs_by_tokens(word, True).numpy()\n",
     "                representation = self.get_word_vec(word, True)\n",
     "            \n",
     "            if not torch.sum(torch.abs(representation)) > 0:\n",
