TODO: Scene graph sim functions (transition from AI2THOR). Run ALFRED valid_unseen on baseline with all affordances working. Clean up seq2seq model and read SF-ID net paper. Test on ALFRED valid_unseen.

--- a/Sentence_Embedding.ipynb
+++ b/Sentence_Embedding.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "higher-development",
+   "id": "abroad-bangladesh",
    "metadata": {},
    "source": [
     "# Utils"
@@ -23,13 +23,12 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "interracial-eight",
+   "id": "photographic-moment",
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
     "import math\n",
-    "\n",
     "\n",
     "def as_minutes(s):\n",
     "    m = math.floor(s / 60)\n",
@@ -48,7 +47,6 @@
     "import matplotlib.ticker as ticker\n",
     "import numpy as np\n",
     "\n",
-    "\n",
     "def show_plot(points):\n",
     "    plt.figure()\n",
     "    fig, ax = plt.subplots()\n",
@@ -66,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 99,
    "id": "turned-tunisia",
    "metadata": {},
    "outputs": [
@@ -74,7 +72,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 6574/6574 [00:55<00:00, 118.43it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 6574/6574 [00:15<00:00, 411.55it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████| 251/251 [00:01<00:00, 232.19it/s]\n"
      ]
     }
    ],
@@ -140,7 +139,8 @@
     "            dataset.append((instruction_actions, scene))\n",
     "    return dataset\n",
     "\n",
-    "dataset = load_next_alfred_data(\"D:/Datasets/alfred/data/ALFRED_json_2.1.0/train/*/*/*.json\")"
+    "train_dataset = load_next_alfred_data(\"D:/Datasets/alfred/data/ALFRED_json_2.1.0/train/*/*/*.json\")\n",
+    "eval_dataset = load_next_alfred_data(\"D:/Datasets/alfred/data/ALFRED_json_2.1.0/valid_seen/*/*/*.json\")"
    ]
   },
   {
@@ -183,7 +183,7 @@
     "        self.word2index = {}\n",
     "        self.word2count = {}\n",
     "        self.index2word = {}\n",
-    "        self.n_words = 2\n",
+    "        self.n_words = 0\n",
     "    \n",
     "    def add_sentence(self, sentence):\n",
     "        for word in sentence:\n",
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incorporate-bathroom",
+   "id": "informational-belfast",
    "metadata": {},
    "source": [
     "# Model"
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "patient-galaxy",
+   "id": "surgical-conditions",
    "metadata": {},
    "source": [
     "# Train"
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sweet-consumption",
+   "id": "living-discount",
    "metadata": {},
    "source": [
     "# Eval"
@@ -1188,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "exempt-rogers",
+   "id": "lonely-psychology",
    "metadata": {},
    "outputs": [
     {
