Added sentence embedding changes, if any. TODO:Adding evaluation for the sentence embedding model using the ALFRED valid_unseen data, working on this from PC where as Baseline_Instructor and Baseline_Instructor_Seperate_Scoring is done on my macbook.

--- a/Sentence_Embedding.ipynb
+++ b/Sentence_Embedding.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abroad-bangladesh",
+   "id": "present-knowing",
    "metadata": {},
    "source": [
     "# Utils"
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "photographic-moment",
+   "id": "alleged-ability",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "informational-belfast",
+   "id": "arranged-venue",
    "metadata": {},
    "source": [
     "# Model"
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "surgical-conditions",
+   "id": "enhanced-usage",
    "metadata": {},
    "source": [
     "# Train"
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "living-discount",
+   "id": "corrected-witch",
    "metadata": {},
    "source": [
     "# Eval"
@@ -1187,17 +1187,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "id": "lonely-psychology",
+   "execution_count": 113,
+   "id": "imported-union",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pick up box with watch from couch -> ['PickupObject', '<EOS>'] (['PickupObject'])\n",
-      "pick up the black pot on the counter -> ['PickupObject', '<EOS>'] (['PickupObject'])\n",
-      "pick up a slice of lettuce -> ['PickupObject', '<EOS>'] (['PickupObject'])\n"
+      "pick up the knife from the sink -> ['PickupObject', '<EOS>'] (True)\n",
+      "pick up the bar of soap -> ['PickupObject', '<EOS>'] (True)\n",
+      "pick up the knife on the counter -> ['PickupObject', '<EOS>'] (True)\n",
+      "place the cup onto the counter above the dishwasher -> ['PutObject', '<EOS>'] (True)\n",
+      "go straight to the counter -> ['GotoLocation', '<EOS>'] (False)\n",
+      "grab the black plate off of the counter -> ['PickupObject', '<EOS>'] (True)\n",
+      "turn around and walk back to the sink -> ['GotoLocation', '<EOS>'] (True)\n",
+      "turn around walk to microwave open microwave -> ['GotoLocation', '<EOS>'] (True)\n",
+      "put the lettuce on the counter -> ['PutObject', '<EOS>'] (True)\n",
+      "turn right and walk back over to the fridge -> ['GotoLocation', '<EOS>'] (True)\n",
+      "place the potato slice in the sink -> ['PutObject', '<EOS>'] (True)\n",
+      "turn left go to red chair -> ['GotoLocation', '<EOS>'] (True)\n",
+      "take the wine bottle from the fridge -> ['PickupObject', '<EOS>'] (True)\n",
+      "turn left go to the oven -> ['GotoLocation', '<EOS>'] (True)\n",
+      "turn and go to the cupboard above the microwave -> ['GotoLocation', '<EOS>'] (True)\n",
+      "turn on the lamp -> ['PutObject', '<EOS>'] (False)\n",
+      "turn around to face drawer under desk -> ['GotoLocation', '<EOS>'] (True)\n",
+      "pick up the pan from the table -> ['PickupObject', '<EOS>'] (True)\n",
+      "take the cd near the clock -> ['PickupObject', '<EOS>'] (True)\n",
+      "put the spoon in the drawer under the microwave -> ['PutObject', '<EOS>'] (True)\n",
+      "place the mug under the coffee maker -> ['PutObject', '<EOS>'] (True)\n",
+      "pick up a cushion on the bed -> ['PickupObject', '<EOS>'] (True)\n",
+      "pick up the remote -> ['PickupObject', '<EOS>'] (True)\n",
+      "pick up the plate on the counter top -> ['PickupObject', '<EOS>'] (True)\n",
+      "take a middle slice of bread -> ['PickupObject', '<EOS>'] (True)\n",
+      "place the green sponge in to the tub -> ['PutObject', '<EOS>'] (True)\n",
+      "pick up the knife in the sink -> ['PickupObject', '<EOS>'] (True)\n",
+      "move a step forward to the white table -> ['GotoLocation', '<EOS>'] (True)\n",
+      "grab a slice of lettuce off of the counter -> ['PickupObject', '<EOS>'] (True)\n",
+      "put the knife on the counter -> ['PutObject', '<EOS>'] (True)\n",
+      "turn around and head towards the round black table -> ['GotoLocation', '<EOS>'] (True)\n",
+      "put the knife in the microwave -> ['PutObject', '<EOS>'] (True)\n",
+      "pick up the red credit card from the stand -> ['PickupObject', '<EOS>'] (True)\n",
+      "pick up the tomato from the bin -> ['PickupObject', '<EOS>'] (True)\n",
+      "take the watch from behind the gold vase -> ['PickupObject', '<EOS>'] (True)\n",
+      "cook egg in microwave remove egg from microwave -> ['PickupObject', '<EOS>'] (False)\n",
+      "pick up left hand knife from counter -> ['PickupObject', '<EOS>'] (True)\n",
+      "turn right towards the stove top -> ['GotoLocation', '<EOS>'] (True)\n",
+      "wait a moment -> ['GotoLocation', '<EOS>'] (True)\n",
+      "turn around and walk to the sink -> ['GotoLocation', '<EOS>'] (True)\n",
+      "put the cell phone on the plate -> ['PutObject', '<EOS>'] (True)\n",
+      "pick up pot with green sponge from stove -> ['PickupObject', '<EOS>'] (True)\n",
+      "open the cabinet door above the sink -> ['GotoLocation', '<EOS>'] (False)\n",
+      "walk across the room to the trash can -> ['GotoLocation', '<EOS>'] (True)\n",
+      "put the slice in the microwave -> ['PutObject', '<EOS>'] (True)\n",
+      "turn left and walk to the tub -> ['GotoLocation', '<EOS>'] (True)\n",
+      "put the book on the bed -> ['PutObject', '<EOS>'] (True)\n",
+      "turn left and head back to the sink -> ['GotoLocation', '<EOS>'] (True)\n",
+      "go around the island to the loaf of bread -> ['GotoLocation', '<EOS>'] (True)\n",
+      "grab the knife that s on the counter -> ['PickupObject', '<EOS>'] (True)\n",
+      "place the roll in the closet cabinet -> ['PutObject', '<EOS>'] (True)\n",
+      "take a slice of tomato from the counter -> ['PickupObject', '<EOS>'] (True)\n",
+      "turn around and walk to the counter -> ['GotoLocation', '<EOS>'] (True)\n",
+      "move to the sink to the left -> ['GotoLocation', '<EOS>'] (True)\n",
+      "grab the credit card on the shelf -> ['PickupObject', '<EOS>'] (True)\n",
+      "turn around and head for the oven -> ['GotoLocation', '<EOS>'] (True)\n",
+      "place the candle on the toilet -> ['PutObject', '<EOS>'] (True)\n",
+      "walk across the room to face the black table -> ['GotoLocation', '<EOS>'] (True)\n",
+      "walk with the knife towards the fridge -> ['GotoLocation', '<EOS>'] (True)\n",
+      "pick up the cup from the night stand -> ['PickupObject', '<EOS>'] (True)\n",
+      "pick up the egg off of the counter -> ['PickupObject', '<EOS>'] (True)\n",
+      "pick up the potato off of the counter -> ['PickupObject', '<EOS>'] (True)\n",
+      "pick up the cup from the sink -> ['PickupObject', '<EOS>'] (True)\n",
+      "put soap into bottom right cabinet -> ['PutObject', '<EOS>'] (True)\n",
+      "turn left and walk towards the adjacent sink -> ['GotoLocation', '<EOS>'] (True)\n",
+      "put lettuce on table -> ['PutObject', '<EOS>'] (True)\n",
+      "close the refrigerator door and turn to the right -> ['GotoLocation', '<EOS>'] (True)\n",
+      "put the lettuce in a pot -> ['PutObject', '<EOS>'] (True)\n",
+      "head left to the glass table -> ['GotoLocation', '<EOS>'] (True)\n",
+      "pick up the wine bottle from the trash can -> ['PickupObject', '<EOS>'] (True)\n",
+      "turn to the left -> ['GotoLocation', '<EOS>'] (True)\n",
+      "turn around go to the refrigerator -> ['GotoLocation', '<EOS>'] (True)\n",
+      "go left and then left to face the fridge -> ['GotoLocation', '<EOS>'] (True)\n",
+      "turn around and walk forward to the table -> ['GotoLocation', '<EOS>'] (True)\n",
+      "go to the left of salt on counter -> ['GotoLocation', '<EOS>'] (True)\n",
+      "pick up green sponge from back of toilet -> ['PickupObject', '<EOS>'] (True)\n",
+      "turn left move to the desk -> ['GotoLocation', '<EOS>'] (True)\n",
+      "go to the kitchen island -> ['GotoLocation', '<EOS>'] (True)\n",
+      "put the mug in the sink -> ['PutObject', '<EOS>'] (True)\n",
+      "put the rag on the toilet tank lid -> ['PutObject', '<EOS>'] (True)\n",
+      "turn right turn left to the counter -> ['GotoLocation', '<EOS>'] (True)\n",
+      "open the fridge and remove the egg -> ['PickupObject', '<EOS>'] (True)\n",
+      "pick up a pen from the desk -> ['PickupObject', '<EOS>'] (True)\n",
+      "pickup the pencil on the cabinet -> ['PickupObject', '<EOS>'] (True)\n",
+      "pick up the cup -> ['PickupObject', '<EOS>'] (True)\n",
+      "grab the disc on the dresser -> ['PickupObject', '<EOS>'] (True)\n",
+      "turn to your left and approach the sink -> ['GotoLocation', '<EOS>'] (True)\n",
+      "turn right to face the stove again -> ['GotoLocation', '<EOS>'] (True)\n",
+      "stay at the dresser -> ['GotoLocation', '<EOS>'] (True)\n",
+      "take the potato out of the fridge -> ['PickupObject', '<EOS>'] (True)\n",
+      "remove the gold wine glass from inside the sink -> ['PickupObject', '<EOS>'] (True)\n",
+      "take the pencil out of the waste basket -> ['PickupObject', '<EOS>'] (True)\n",
+      "turn left to face the white table -> ['GotoLocation', '<EOS>'] (True)\n",
+      "pick up the green candle off of the counter -> ['PickupObject', '<EOS>'] (True)\n",
+      "turn on the lamp -> ['PutObject', '<EOS>'] (False)\n",
+      "place the soap on the silver rack -> ['PutObject', '<EOS>'] (True)\n",
+      "open he microwave and leave it in there -> ['PutObject', '<EOS>'] (True)\n",
+      "turn the lamp on -> ['GotoLocation', '<EOS>'] (False)\n",
+      "turn left walk to counter by the stove -> ['GotoLocation', '<EOS>'] (True)\n",
+      "take the box of tissue off the counter -> ['PickupObject', '<EOS>'] (True)\n"
      ]
     }
    ],
@@ -1237,10 +1334,10 @@
     "\n",
     "        return decoded_words, decoder_attentions[:di + 1]\n",
     "\n",
-    "for t in range(3):\n",
+    "for t in range(100):\n",
     "    sample = random.choice(training_pairs)\n",
     "    output = evaluate(encoder, decoder, sample[0], lang, action_lang)\n",
-    "    print('%s -> %s (%s)' % (' '.join(sample[0]), output[0], sample[1]))\n"
+    "    print('%s -> %s (%s)' % (' '.join(sample[0]), output[0], output[0][0] == sample[1][0]))\n"
    ]
   }
  ],
