The commit where I have integrated the Sentence encoder, action predictor, and argument decoder into a baseline. New results

--- a/Sentence_Embedding.ipynb
+++ b/Sentence_Embedding.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "starting-european",
    "metadata": {},
    "source": [
     "# Sentence Embedding\n",
@@ -14,7 +13,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "present-knowing",
    "metadata": {},
    "source": [
     "# Utils"
@@ -23,7 +21,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "alleged-ability",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +53,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "narrow-blake",
    "metadata": {},
    "source": [
     "# Dataset: ALFRED"
@@ -65,7 +61,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "turned-tunisia",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +141,6 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "hairy-kelly",
    "metadata": {},
    "outputs": [
     {
@@ -203,10 +197,10 @@
     "            self.word2count[word] += 1\n",
     "    \n",
     "    def word(self, index):\n",
-    "        return self.index2word.get(str(index))\n",
+    "        return self.index2word.get(str(index), f\"<unk:{index}>\")\n",
     "    \n",
     "    def index(self, word):\n",
-    "        return self.word2index.get(word)\n",
+    "        return self.word2index.get(word, f\"<unk:{word}>\")\n",
     "    \n",
     "    def dump(self, filename):\n",
     "        obj = {\n",
@@ -297,7 +291,6 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "australian-dimension",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +427,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "arranged-venue",
    "metadata": {},
    "source": [
     "# Model"
@@ -443,7 +435,6 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "recreational-dancing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +504,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "enhanced-usage",
    "metadata": {},
    "source": [
     "# Train - Action Decoder"
@@ -522,7 +512,6 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "intellectual-stable",
    "metadata": {
     "scrolled": true
    },
@@ -666,7 +655,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proud-istanbul",
    "metadata": {},
    "source": [
     "# Train - Argument Decoder"
@@ -675,7 +663,6 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "arctic-findings",
    "metadata": {
     "scrolled": true
    },
@@ -1380,7 +1367,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "corrected-witch",
    "metadata": {},
    "source": [
     "# Eval"
@@ -1389,7 +1375,6 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "imported-union",
    "metadata": {
     "scrolled": true
    },
@@ -3501,7 +3486,6 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "emotional-separate",
    "metadata": {},
    "outputs": [
     {
@@ -3518,7 +3502,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hungry-marsh",
    "metadata": {},
    "source": [
     "# Eval Action / Arguments"
@@ -3527,7 +3510,6 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "flying-lunch",
    "metadata": {
     "scrolled": true
    },
@@ -5597,7 +5579,6 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "intensive-sense",
    "metadata": {},
    "outputs": [
     {
@@ -5629,7 +5610,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
